tdf#158900: make sure to not break after spaces before \n

Change-Id: I9af98e270090530fc9bd621fbbcdf0ba35d0107c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/161378
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>